--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config=./build/webpack.dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.prod.config.js"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.prod.config.js",
+    "example": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.dev.config.js"
   },
   "dependencies": {
     "canvas-nest.js": "^2.0.1",
@@ -31,6 +32,7 @@
     "file-loader": "^1.1.4",
     "html-webpack-plugin": "^3.2.0",
     "vue-loader": "^13.0.5",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
