--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "example": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.dev.config.js"
   },
   "dependencies": {
-    "canvas-nest.js": "^2.0.1",
-    "vue": "^2.5.11"
+    "canvas-nest.js": "^2.0.1"
+  },
+  "peerDependencies": {
+    "vue": "^2.x"
   },
   "browserslist": [
     "> 1%",
