Add area render

--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   "directories": {
     "example": "example"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config=./build/webpack.dev.config.js",
+    "dev": "npm run build && cross-env NODE_ENV=development webpack-dev-server --open --hot --config=./build/webpack.dev.config.js",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.prod.config.js",
     "example": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.dev.config.js"
   },
