--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "example": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=./build/webpack.dev.config.js"
   },
   "dependencies": {
-    "canvas-nest.js": "2.0.3",
-    "vue": "2.5.17"
+    "canvas-nest.js": "2.0.3"
   },
   "peerDependencies": {
-    "vue": "^2.x"
+    "vue": "^2.5.x"
   },
   "browserslist": [
     "> 1%",
